<resources>
    <string name="app_name">Order Food</string>
    <string name="dangky">Đăng ký</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="chungminhnhandan">Chứng minh nhân dân</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="xacnhan">Xác nhận</string>
    <string name="dongy">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="nhaplaitaikhoan">Tài khoản không hợp lệ. Xin nhập lại!</string>
    <string name="nhaplaimatkhau">Mật khâu không hợp lệ. Xin nhập lại!</string>
    <string name="dangkythanhcong">Đăng ký thành công!</string>
    <string name="dangkythatbai">Đăng ký thất bại!</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="thongke">Thống kê</string>
    <string name="caidat">Cài đặt</string>
    <string name="open">Mở</string>
    <string name="close">Đóng</string>
    <string name="thembanan">Thêm bàn ăn</string>
    <string name="tenbanan">Tên bàn ăn</string>
    <string name="themthucdon">Thêm thực đơn</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="giatien">Giá tiền</string>
    <string name="banan">Bàn ăn</string>
    <string name="themloaithucdon">Thêm loại thực đơn</string>
    <string name="loaithucdon">Loại thực đơn</string>
    <string name="nhaploaithucdon">Nhập loại thực đơn</string>
    <string name="vuilongnhapdulieu">Vui lòng nhập dữ liệu.</string>
    <string name="themthanhcong">Thêm thành công.</string>
    <string name="themthatbai">Thêm thất bại.</string>
    <string name="themmonan">Thêm món ăn</string>
    <string name="loithemmoian">Tên món ăn hoặc giá tiền không hợp lệ!</string>
    <string name="soluong">Số lượng</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="trove">Trở về</string>
    <string name="thanhtien">Thành tiền:</string>
    <string name="thanhtoanthanhcong">Thanh toán thành công!</string>
    <string name="loithanhtoan">Lỗi thanh toán.</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="xoathanhcong">Xóa thành công.</string>
    <string name="xoathatbai">Xóa thất bại.</string>
    <string name="suathanhcong">Sửa thành công.</string>
    <string name="loi">Lỗi.</string>
    <string name="themnhanvien">Thêm nhân viên</string>
    <string name="capnhat">Cập nhật</string>
</resources>
