<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_vertical"
    android:background="@color/colorPrimary"
    android:noHistory="true"
    tools:context="com.example.nhathuy.app_orderfood.Activity.DangKyActivity">

    <TextView
        android:id="@+id/txtTieuDe"
        android:text="@string/dangky"
        android:textSize="@dimen/size40sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/dimen10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtTenDangNhapDK"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="@dimen/dimen10dp"
        android:hint="@string/tendangnhap"
        android:padding="@dimen/dimen10dp"
        android:layout_margin="@dimen/dimen10dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textFilter" />

    <EditText
        android:id="@+id/edtMatKhauDK"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/dimen10dp"
        android:hint="@string/matkhau"
        android:padding="@dimen/dimen10dp"
        android:layout_margin="@dimen/dimen10dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <RadioGroup
        android:id="@+id/rdgGioiTinh"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdbNam"
            android:text="@string/nam"
            android:checked="true"
            android:paddingRight="@dimen/dimen10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rdbNu"
            android:text="@string/nu"
            android:paddingRight="@dimen/dimen10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spnPhanQuyen"
        android:textDirection="locale"
        android:spinnerMode="dialog"
        android:layout_marginLeft="@dimen/dimen10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtNgaySinhDK"
        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
        android:drawablePadding="@dimen/dimen10dp"
        android:hint="@string/ngaysinh"
        android:padding="@dimen/dimen10dp"
        android:layout_margin="@dimen/dimen10dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textFilter|number" />

    <EditText
        android:id="@+id/edtCmndDK"
        android:drawableLeft="@drawable/idcard"
        android:drawablePadding="@dimen/dimen10dp"
        android:hint="@string/chungminhnhandan"
        android:padding="@dimen/dimen10dp"
        android:layout_margin="@dimen/dimen10dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textFilter|number"
        android:maxLength="8" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/btnXacNhanDK"
            android:text="@string/xacnhan"
            android:background="@color/colorGreen"
            android:padding="@dimen/dimen10dp"
            android:layout_margin="@dimen/dimen10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnThoatDK"
            android:text="@string/trove"
            android:background="@color/colorOrange"
            android:padding="@dimen/dimen10dp"
            android:layout_margin="@dimen/dimen10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
