<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:weightSum="1">

    <LinearLayout
        android:background="@color/colorGreen"
        android:padding="@dimen/dimen5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:text="@string/tenmonan"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:text="@string/soluong"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size18sp"
            android:paddingLeft="@dimen/dimen30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:text="@string/giatien"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size18sp"
            android:paddingLeft="@dimen/dimen20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <GridView
        android:id="@+id/grvThanhToan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:numColumns="1"/>

    <TextView
        android:id="@+id/txtTongTien"
        android:text="@string/thanhtien"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="@dimen/size18sp"
        android:layout_margin="@dimen/dimen5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnThanhToan"
            android:text="@string/thanhtoan"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:layout_marginRight="@dimen/dimen5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnThoatThanhToan"
            android:text="@string/trove"
            android:textColor="@color/colorWhite"
            android:background="@color/colorOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>